--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,22 @@ governing permissions and limitations under the License.
 */
 -->
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="description" content="Adobe Express Add-on for User Friendly Icon" />
-        <meta name="keywords" content="Adobe, Express, Add-On, React, JavaScript" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    </head>
-    <body>
-        <div id="root"></div>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Adobe Express Add-on for User Friendly Icon"
+    />
+    <meta name="keywords" content="Adobe, Express, Add-On, React, JavaScript" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="sandbox"
+      content="allow-forms allow-scripts allow-same-origin"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
